APIs/azure.com/servicefabric/6.0.0.1/java-client/README.md
# openapi-java-client

Service Fabric Client APIs
- API version: 6.0.0.1
  - Build date: 2024-10-12T10:56:33.392772-04:00[America/New_York]
  - Generator version: 7.9.0

Service Fabric REST Client APIs allows management of Service Fabric clusters, applications and services.


*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>6.0.0.1</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:6.0.0.1"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-6.0.0.1.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.model.*;
import org.openapitools.client.api.ApplicationApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("http://azure.local:19080");

    ApplicationApi apiInstance = new ApplicationApi(defaultClient);
    String apiVersion = "6.0"; // String | The version of the API. This is a required parameter and it's value must be \"6.0\".
    ApplicationDescription applicationDescription = new ApplicationDescription(); // ApplicationDescription | Description for creating an application.
    Long timeout = 60L; // Long | The server timeout for performing the operation in seconds. This specifies the time duration that the client is willing to wait for the requested operation to complete. The default value for this parameter is 60 seconds.
    try {
      apiInstance.createApplication(apiVersion, applicationDescription, timeout);
    } catch (ApiException e) {
      System.err.println("Exception when calling ApplicationApi#createApplication");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *http://azure.local:19080*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ApplicationApi* | [**createApplication**](docs/ApplicationApi.md#createApplication) | **POST** /Applications/$/Create | Creates a Service Fabric application.
*ApplicationApi* | [**deleteApplication**](docs/ApplicationApi.md#deleteApplication) | **POST** /Applications/{applicationId}/$/Delete | Deletes an existing Service Fabric application.
*ApplicationApi* | [**getApplicationHealth**](docs/ApplicationApi.md#getApplicationHealth) | **GET** /Applications/{applicationId}/$/GetHealth | Gets the health of the service fabric application.
*ApplicationApi* | [**getApplicationHealthUsingPolicy**](docs/ApplicationApi.md#getApplicationHealthUsingPolicy) | **POST** /Applications/{applicationId}/$/GetHealth | Gets the health of a Service Fabric application using the specified policy.
*ApplicationApi* | [**getApplicationInfo**](docs/ApplicationApi.md#getApplicationInfo) | **GET** /Applications/{applicationId} | Gets information about a Service Fabric application.
*ApplicationApi* | [**getApplicationInfoList**](docs/ApplicationApi.md#getApplicationInfoList) | **GET** /Applications | Gets the list of applications created in the Service Fabric cluster that match filters specified as the parameter.
*ApplicationApi* | [**getApplicationLoadInfo**](docs/ApplicationApi.md#getApplicationLoadInfo) | **GET** /Applications/{applicationId}/$/GetLoadInformation | Gets load information about a Service Fabric application.
*ApplicationApi* | [**getApplicationUpgrade**](docs/ApplicationApi.md#getApplicationUpgrade) | **GET** /Applications/{applicationId}/$/GetUpgradeProgress | Gets details for the latest upgrade performed on this application.
*ApplicationApi* | [**getDeployedApplicationHealth**](docs/ApplicationApi.md#getDeployedApplicationHealth) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetHealth | Gets the information about health of an application deployed on a Service Fabric node.
*ApplicationApi* | [**getDeployedApplicationHealthUsingPolicy**](docs/ApplicationApi.md#getDeployedApplicationHealthUsingPolicy) | **POST** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetHealth | Gets the information about health of an application deployed on a Service Fabric node. using the specified policy.
*ApplicationApi* | [**getDeployedApplicationInfo**](docs/ApplicationApi.md#getDeployedApplicationInfo) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId} | Gets the information about an application deployed on a Service Fabric node.
*ApplicationApi* | [**getDeployedApplicationInfoList**](docs/ApplicationApi.md#getDeployedApplicationInfoList) | **GET** /Nodes/{nodeName}/$/GetApplications | Gets the list of applications deployed on a Service Fabric node.
*ApplicationApi* | [**reportApplicationHealth**](docs/ApplicationApi.md#reportApplicationHealth) | **POST** /Applications/{applicationId}/$/ReportHealth | Sends a health report on the Service Fabric application.
*ApplicationApi* | [**reportDeployedApplicationHealth**](docs/ApplicationApi.md#reportDeployedApplicationHealth) | **POST** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/ReportHealth | Sends a health report on the Service Fabric application deployed on a Service Fabric node.
*ApplicationApi* | [**resumeApplicationUpgrade**](docs/ApplicationApi.md#resumeApplicationUpgrade) | **POST** /Applications/{applicationId}/$/MoveToNextUpgradeDomain | Resumes upgrading an application in the Service Fabric cluster.
*ApplicationApi* | [**rollbackApplicationUpgrade**](docs/ApplicationApi.md#rollbackApplicationUpgrade) | **POST** /Applications/{applicationId}/$/RollbackUpgrade | Starts rolling back the currently on-going upgrade of an application in the Service Fabric cluster.
*ApplicationApi* | [**startApplicationUpgrade**](docs/ApplicationApi.md#startApplicationUpgrade) | **POST** /Applications/{applicationId}/$/Upgrade | Starts upgrading an application in the Service Fabric cluster.
*ApplicationApi* | [**updateApplicationUpgrade**](docs/ApplicationApi.md#updateApplicationUpgrade) | **POST** /Applications/{applicationId}/$/UpdateUpgrade | Updates an ongoing application upgrade in the Service Fabric cluster.
*ApplicationTypeApi* | [**getApplicationManifest**](docs/ApplicationTypeApi.md#getApplicationManifest) | **GET** /ApplicationTypes/{applicationTypeName}/$/GetApplicationManifest | Gets the manifest describing an application type.
*ApplicationTypeApi* | [**getApplicationTypeInfoList**](docs/ApplicationTypeApi.md#getApplicationTypeInfoList) | **GET** /ApplicationTypes | Gets the list of application types in the Service Fabric cluster.
*ApplicationTypeApi* | [**getApplicationTypeInfoListByName**](docs/ApplicationTypeApi.md#getApplicationTypeInfoListByName) | **GET** /ApplicationTypes/{applicationTypeName} | Gets the list of application types in the Service Fabric cluster matching exactly the specified name.
*ApplicationTypeApi* | [**provisionApplicationType**](docs/ApplicationTypeApi.md#provisionApplicationType) | **POST** /ApplicationTypes/$/Provision | Provisions or registers a Service Fabric application type with the cluster.
*ApplicationTypeApi* | [**unprovisionApplicationType**](docs/ApplicationTypeApi.md#unprovisionApplicationType) | **POST** /ApplicationTypes/{applicationTypeName}/$/Unprovision | Removes or unregisters a Service Fabric application type from the cluster.
*ChaosApi* | [**getChaosReport**](docs/ChaosApi.md#getChaosReport) | **GET** /Tools/Chaos/$/Report | Gets the next segment of the Chaos report based on the passed-in continuation token or the passed-in time-range.
*ChaosApi* | [**startChaos**](docs/ChaosApi.md#startChaos) | **POST** /Tools/Chaos/$/Start | Starts Chaos in the cluster.
*ChaosApi* | [**stopChaos**](docs/ChaosApi.md#stopChaos) | **POST** /Tools/Chaos/$/Stop | Stops Chaos in the cluster if it is already running, otherwise it does nothing.
*ClusterApi* | [**getAadMetadata**](docs/ClusterApi.md#getAadMetadata) | **GET** /$/GetAadMetadata | Gets the Azure Active Directory metadata used for secured connection to cluster.
*ClusterApi* | [**getClusterConfiguration**](docs/ClusterApi.md#getClusterConfiguration) | **GET** /$/GetClusterConfiguration | Get the Service Fabric standalone cluster configuration.
*ClusterApi* | [**getClusterConfigurationUpgradeStatus**](docs/ClusterApi.md#getClusterConfigurationUpgradeStatus) | **GET** /$/GetClusterConfigurationUpgradeStatus | Get the cluster configuration upgrade status of a Service Fabric standalone cluster.
*ClusterApi* | [**getClusterHealth**](docs/ClusterApi.md#getClusterHealth) | **GET** /$/GetClusterHealth | Gets the health of a Service Fabric cluster.
*ClusterApi* | [**getClusterHealthChunk**](docs/ClusterApi.md#getClusterHealthChunk) | **GET** /$/GetClusterHealthChunk | Gets the health of a Service Fabric cluster using health chunks.
*ClusterApi* | [**getClusterHealthChunkUsingPolicyAndAdvancedFilters**](docs/ClusterApi.md#getClusterHealthChunkUsingPolicyAndAdvancedFilters) | **POST** /$/GetClusterHealthChunk | Gets the health of a Service Fabric cluster using health chunks.
*ClusterApi* | [**getClusterHealthUsingPolicy**](docs/ClusterApi.md#getClusterHealthUsingPolicy) | **POST** /$/GetClusterHealth | Gets the health of a Service Fabric cluster using the specified policy.
*ClusterApi* | [**getClusterManifest**](docs/ClusterApi.md#getClusterManifest) | **GET** /$/GetClusterManifest | Get the Service Fabric cluster manifest.
*ClusterApi* | [**getClusterUpgradeProgress**](docs/ClusterApi.md#getClusterUpgradeProgress) | **GET** /$/GetUpgradeProgress | Gets the progress of the current cluster upgrade.
*ClusterApi* | [**getProvisionedFabricCodeVersionInfoList**](docs/ClusterApi.md#getProvisionedFabricCodeVersionInfoList) | **GET** /$/GetProvisionedCodeVersions | Gets a list of fabric code versions that are provisioned in a Service Fabric cluster.
*ClusterApi* | [**getProvisionedFabricConfigVersionInfoList**](docs/ClusterApi.md#getProvisionedFabricConfigVersionInfoList) | **GET** /$/GetProvisionedConfigVersions | Gets a list of fabric config versions that are provisioned in a Service Fabric cluster.
*ClusterApi* | [**provisionCluster**](docs/ClusterApi.md#provisionCluster) | **POST** /$/Provision | Provision the code or configuration packages of a Service Fabric cluster.
*ClusterApi* | [**reportClusterHealth**](docs/ClusterApi.md#reportClusterHealth) | **POST** /$/ReportClusterHealth | Sends a health report on the Service Fabric cluster.
*ClusterApi* | [**resumeClusterUpgrade**](docs/ClusterApi.md#resumeClusterUpgrade) | **POST** /$/MoveToNextUpgradeDomain | Make the cluster upgrade move on to the next upgrade domain.
*ClusterApi* | [**rollbackClusterUpgrade**](docs/ClusterApi.md#rollbackClusterUpgrade) | **POST** /$/RollbackUpgrade | Rollback the upgrade of a Service Fabric cluster.
*ClusterApi* | [**startClusterConfigurationUpgrade**](docs/ClusterApi.md#startClusterConfigurationUpgrade) | **POST** /$/StartClusterConfigurationUpgrade | Start upgrading the configuration of a Service Fabric standalone cluster.
*ClusterApi* | [**startClusterUpgrade**](docs/ClusterApi.md#startClusterUpgrade) | **POST** /$/Upgrade | Start upgrading the code or configuration version of a Service Fabric cluster.
*ClusterApi* | [**unprovisionCluster**](docs/ClusterApi.md#unprovisionCluster) | **POST** /$/Unprovision | Unprovision the code or configuration packages of a Service Fabric cluster.
*ClusterApi* | [**updateClusterUpgrade**](docs/ClusterApi.md#updateClusterUpgrade) | **POST** /$/UpdateUpgrade | Update the upgrade parameters of a Service Fabric cluster upgrade.
*CodePackageApi* | [**getDeployedCodePackageInfoList**](docs/CodePackageApi.md#getDeployedCodePackageInfoList) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetCodePackages | Gets the list of code packages deployed on a Service Fabric node.
*CodePackageApi* | [**restartDeployedCodePackage**](docs/CodePackageApi.md#restartDeployedCodePackage) | **POST** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetCodePackages/$/Restart | Restarts a code package deployed on a Service Fabric node in a cluster.
*ComposeDeploymentApi* | [**createComposeDeployment**](docs/ComposeDeploymentApi.md#createComposeDeployment) | **PUT** /ComposeDeployments/$/Create | Creates a Service Fabric compose deployment.
*ComposeDeploymentApi* | [**getComposeDeploymentStatus**](docs/ComposeDeploymentApi.md#getComposeDeploymentStatus) | **GET** /ComposeDeployments/{deploymentName} | Gets information about a Service Fabric compose deployment.
*ComposeDeploymentApi* | [**getComposeDeploymentStatusList**](docs/ComposeDeploymentApi.md#getComposeDeploymentStatusList) | **GET** /ComposeDeployments | Gets the list of compose deployments created in the Service Fabric cluster.
*ComposeDeploymentApi* | [**getComposeDeploymentUpgradeProgress**](docs/ComposeDeploymentApi.md#getComposeDeploymentUpgradeProgress) | **GET** /ComposeDeployments/{deploymentName}/$/GetUpgradeProgress | Gets details for the latest upgrade performed on this Service Fabric compose deployment.
*ComposeDeploymentApi* | [**removeComposeDeployment**](docs/ComposeDeploymentApi.md#removeComposeDeployment) | **POST** /ComposeDeployments/{deploymentName}/$/Delete | Deletes an existing Service Fabric compose deployment from cluster.
*ComposeDeploymentApi* | [**startComposeDeploymentUpgrade**](docs/ComposeDeploymentApi.md#startComposeDeploymentUpgrade) | **POST** /ComposeDeployments/{deploymentName}/$/Upgrade | Starts upgrading a compose deployment in the Service Fabric cluster.
*FaultsApi* | [**cancelOperation**](docs/FaultsApi.md#cancelOperation) | **POST** /Faults/$/Cancel | Cancels a user-induced fault operation.
*FaultsApi* | [**getDataLossProgress**](docs/FaultsApi.md#getDataLossProgress) | **GET** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/GetDataLossProgress | Gets the progress of a partition data loss operation started using the StartDataLoss API.
*FaultsApi* | [**getFaultOperationList**](docs/FaultsApi.md#getFaultOperationList) | **GET** /Faults/ | Gets a list of user-induced fault operations filtered by provided input.
*FaultsApi* | [**getNodeTransitionProgress**](docs/FaultsApi.md#getNodeTransitionProgress) | **GET** /Faults/Nodes/{nodeName}/$/GetTransitionProgress | Gets the progress of an operation started using StartNodeTransition.
*FaultsApi* | [**getPartitionRestartProgress**](docs/FaultsApi.md#getPartitionRestartProgress) | **GET** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/GetRestartProgress | Gets the progress of a PartitionRestart operation started using StartPartitionRestart.
*FaultsApi* | [**getQuorumLossProgress**](docs/FaultsApi.md#getQuorumLossProgress) | **GET** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/GetQuorumLossProgress | Gets the progress of a quorum loss operation on a partition started using the StartQuorumLoss API.
*FaultsApi* | [**startDataLoss**](docs/FaultsApi.md#startDataLoss) | **POST** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/StartDataLoss | This API will induce data loss for the specified partition. It will trigger a call to the OnDataLossAsync API of the partition.
*FaultsApi* | [**startNodeTransition**](docs/FaultsApi.md#startNodeTransition) | **POST** /Faults/Nodes/{nodeName}/$/StartTransition/ | Starts or stops a cluster node.
*FaultsApi* | [**startPartitionRestart**](docs/FaultsApi.md#startPartitionRestart) | **POST** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/StartRestart | This API will restart some or all replicas or instances of the specified partition.
*FaultsApi* | [**startQuorumLoss**](docs/FaultsApi.md#startQuorumLoss) | **POST** /Faults/Services/{serviceId}/$/GetPartitions/{partitionId}/$/StartQuorumLoss | Induces quorum loss for a given stateful service partition.
*ImageStoreApi* | [**copyImageStoreContent**](docs/ImageStoreApi.md#copyImageStoreContent) | **POST** /ImageStore/$/Copy | Copies image store content internally
*ImageStoreApi* | [**deleteImageStoreContent**](docs/ImageStoreApi.md#deleteImageStoreContent) | **DELETE** /ImageStore/{contentPath} | Deletes existing image store content.
*ImageStoreApi* | [**getImageStoreContent**](docs/ImageStoreApi.md#getImageStoreContent) | **GET** /ImageStore/{contentPath} | Gets the image store content information.
*ImageStoreApi* | [**getImageStoreRootContent**](docs/ImageStoreApi.md#getImageStoreRootContent) | **GET** /ImageStore | Gets the content information at the root of the image store.
*ImageStoreApi* | [**uploadFile**](docs/ImageStoreApi.md#uploadFile) | **PUT** /ImageStore/{contentPath} | Uploads contents of the file to the image store.
*InfrastructureApi* | [**invokeInfrastructureCommand**](docs/InfrastructureApi.md#invokeInfrastructureCommand) | **POST** /$/InvokeInfrastructureCommand | Invokes an administrative command on the given Infrastructure Service instance.
*InfrastructureApi* | [**invokeInfrastructureQuery**](docs/InfrastructureApi.md#invokeInfrastructureQuery) | **GET** /$/InvokeInfrastructureQuery | Invokes a read-only query on the given infrastructure service instance.
*NodeApi* | [**disableNode**](docs/NodeApi.md#disableNode) | **POST** /Nodes/{nodeName}/$/Deactivate | Deactivate a Service Fabric cluster node with the specified deactivation intent.
*NodeApi* | [**enableNode**](docs/NodeApi.md#enableNode) | **POST** /Nodes/{nodeName}/$/Activate | Activate a Service Fabric cluster node which is currently deactivated.
*NodeApi* | [**getNodeHealth**](docs/NodeApi.md#getNodeHealth) | **GET** /Nodes/{nodeName}/$/GetHealth | Gets the health of a Service Fabric node.
*NodeApi* | [**getNodeHealthUsingPolicy**](docs/NodeApi.md#getNodeHealthUsingPolicy) | **POST** /Nodes/{nodeName}/$/GetHealth | Gets the health of a Service Fabric node, by using the specified health policy.
*NodeApi* | [**getNodeInfo**](docs/NodeApi.md#getNodeInfo) | **GET** /Nodes/{nodeName} | Gets the list of nodes in the Service Fabric cluster.
*NodeApi* | [**getNodeInfoList**](docs/NodeApi.md#getNodeInfoList) | **GET** /Nodes | Gets the list of nodes in the Service Fabric cluster.
*NodeApi* | [**getNodeLoadInfo**](docs/NodeApi.md#getNodeLoadInfo) | **GET** /Nodes/{nodeName}/$/GetLoadInformation | Gets the load information of a Service Fabric node.
*NodeApi* | [**removeNodeState**](docs/NodeApi.md#removeNodeState) | **POST** /Nodes/{nodeName}/$/RemoveNodeState | Notifies Service Fabric that the persisted state on a node has been permanently removed or lost.
*NodeApi* | [**reportNodeHealth**](docs/NodeApi.md#reportNodeHealth) | **POST** /Nodes/{nodeName}/$/ReportHealth | Sends a health report on the Service Fabric node.
*NodeApi* | [**restartNode**](docs/NodeApi.md#restartNode) | **POST** /Nodes/{nodeName}/$/Restart | Restarts a Service Fabric cluster node.
*PartitionApi* | [**getPartitionHealth**](docs/PartitionApi.md#getPartitionHealth) | **GET** /Partitions/{partitionId}/$/GetHealth | Gets the health of the specified Service Fabric partition.
*PartitionApi* | [**getPartitionHealthUsingPolicy**](docs/PartitionApi.md#getPartitionHealthUsingPolicy) | **POST** /Partitions/{partitionId}/$/GetHealth | Gets the health of the specified Service Fabric partition, by using the specified health policy.
*PartitionApi* | [**getPartitionInfo**](docs/PartitionApi.md#getPartitionInfo) | **GET** /Partitions/{partitionId} | Gets the information about a Service Fabric partition.
*PartitionApi* | [**getPartitionInfoList**](docs/PartitionApi.md#getPartitionInfoList) | **GET** /Services/{serviceId}/$/GetPartitions | Gets the list of partitions of a Service Fabric service.
*PartitionApi* | [**getPartitionLoadInformation**](docs/PartitionApi.md#getPartitionLoadInformation) | **GET** /Partitions/{partitionId}/$/GetLoadInformation | Gets the load of the specified Service Fabric partition.
*PartitionApi* | [**getServiceNameInfo**](docs/PartitionApi.md#getServiceNameInfo) | **GET** /Partitions/{partitionId}/$/GetServiceName | Gets the name of the Service Fabric service for a partition.
*PartitionApi* | [**recoverAllPartitions**](docs/PartitionApi.md#recoverAllPartitions) | **POST** /$/RecoverAllPartitions | Indicates to the Service Fabric cluster that it should attempt to recover any services (including system services) which are currently stuck in quorum loss.
*PartitionApi* | [**recoverPartition**](docs/PartitionApi.md#recoverPartition) | **POST** /Partitions/{partitionId}/$/Recover | Indicates to the Service Fabric cluster that it should attempt to recover a specific partition which is currently stuck in quorum loss.
*PartitionApi* | [**recoverServicePartitions**](docs/PartitionApi.md#recoverServicePartitions) | **POST** /Services/$/{serviceId}/$/GetPartitions/$/Recover | Indicates to the Service Fabric cluster that it should attempt to recover the specified service which is currently stuck in quorum loss.
*PartitionApi* | [**recoverSystemPartitions**](docs/PartitionApi.md#recoverSystemPartitions) | **POST** /$/RecoverSystemPartitions | Indicates to the Service Fabric cluster that it should attempt to recover the system services which are currently stuck in quorum loss.
*PartitionApi* | [**reportPartitionHealth**](docs/PartitionApi.md#reportPartitionHealth) | **POST** /Partitions/{partitionId}/$/ReportHealth | Sends a health report on the Service Fabric partition.
*PartitionApi* | [**resetPartitionLoad**](docs/PartitionApi.md#resetPartitionLoad) | **POST** /Partitions/{partitionId}/$/ResetLoad | Resets the current load of a Service Fabric partition.
*PropertyManagementApi* | [**createName**](docs/PropertyManagementApi.md#createName) | **POST** /Names/$/Create | Creates a Service Fabric name.
*PropertyManagementApi* | [**deleteName**](docs/PropertyManagementApi.md#deleteName) | **DELETE** /Names/{nameId} | Deletes a Service Fabric name.
*PropertyManagementApi* | [**deleteProperty**](docs/PropertyManagementApi.md#deleteProperty) | **DELETE** /Names/{nameId}/$/GetProperty | Deletes the specified Service Fabric property.
*PropertyManagementApi* | [**getNameExistsInfo**](docs/PropertyManagementApi.md#getNameExistsInfo) | **GET** /Names/{nameId} | Returns whether the Service Fabric name exists.
*PropertyManagementApi* | [**getPropertyInfo**](docs/PropertyManagementApi.md#getPropertyInfo) | **GET** /Names/{nameId}/$/GetProperty | Gets the specified Service Fabric property.
*PropertyManagementApi* | [**getPropertyInfoList**](docs/PropertyManagementApi.md#getPropertyInfoList) | **GET** /Names/{nameId}/$/GetProperties | Gets information on all Service Fabric properties under a given name.
*PropertyManagementApi* | [**getSubNameInfoList**](docs/PropertyManagementApi.md#getSubNameInfoList) | **GET** /Names/{nameId}/$/GetSubNames | Enumerates all the Service Fabric names under a given name.
*PropertyManagementApi* | [**putProperty**](docs/PropertyManagementApi.md#putProperty) | **PUT** /Names/{nameId}/$/GetProperty | Creates or updates a Service Fabric property.
*PropertyManagementApi* | [**submitPropertyBatch**](docs/PropertyManagementApi.md#submitPropertyBatch) | **POST** /Names/{nameId}/$/GetProperties/$/SubmitBatch | Submits a property batch.
*RepairManagementApi* | [**cancelRepairTask**](docs/RepairManagementApi.md#cancelRepairTask) | **POST** /$/CancelRepairTask | Requests the cancellation of the given repair task.
*RepairManagementApi* | [**createRepairTask**](docs/RepairManagementApi.md#createRepairTask) | **POST** /$/CreateRepairTask | Creates a new repair task.
*RepairManagementApi* | [**deleteRepairTask**](docs/RepairManagementApi.md#deleteRepairTask) | **POST** /$/DeleteRepairTask | Deletes a completed repair task.
*RepairManagementApi* | [**forceApproveRepairTask**](docs/RepairManagementApi.md#forceApproveRepairTask) | **POST** /$/ForceApproveRepairTask | Forces the approval of the given repair task.
*RepairManagementApi* | [**getRepairTaskList**](docs/RepairManagementApi.md#getRepairTaskList) | **GET** /$/GetRepairTaskList | Gets a list of repair tasks matching the given filters.
*RepairManagementApi* | [**updateRepairExecutionState**](docs/RepairManagementApi.md#updateRepairExecutionState) | **POST** /$/UpdateRepairExecutionState | Updates the execution state of a repair task.
*RepairManagementApi* | [**updateRepairTaskHealthPolicy**](docs/RepairManagementApi.md#updateRepairTaskHealthPolicy) | **POST** /$/UpdateRepairTaskHealthPolicy | Updates the health policy of the given repair task.
*ReplicaApi* | [**getDeployedServiceReplicaDetailInfo**](docs/ReplicaApi.md#getDeployedServiceReplicaDetailInfo) | **GET** /Nodes/{nodeName}/$/GetPartitions/{partitionId}/$/GetReplicas/{replicaId}/$/GetDetail | Gets the details of replica deployed on a Service Fabric node.
*ReplicaApi* | [**getDeployedServiceReplicaDetailInfoByPartitionId**](docs/ReplicaApi.md#getDeployedServiceReplicaDetailInfoByPartitionId) | **GET** /Nodes/{nodeName}/$/GetPartitions/{partitionId}/$/GetReplicas | Gets the details of replica deployed on a Service Fabric node.
*ReplicaApi* | [**getDeployedServiceReplicaInfoList**](docs/ReplicaApi.md#getDeployedServiceReplicaInfoList) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetReplicas | Gets the list of replicas deployed on a Service Fabric node.
*ReplicaApi* | [**getReplicaHealth**](docs/ReplicaApi.md#getReplicaHealth) | **GET** /Partitions/{partitionId}/$/GetReplicas/{replicaId}/$/GetHealth | Gets the health of a Service Fabric stateful service replica or stateless service instance.
*ReplicaApi* | [**getReplicaHealthUsingPolicy**](docs/ReplicaApi.md#getReplicaHealthUsingPolicy) | **POST** /Partitions/{partitionId}/$/GetReplicas/{replicaId}/$/GetHealth | Gets the health of a Service Fabric stateful service replica or stateless service instance using the specified policy.
*ReplicaApi* | [**getReplicaInfo**](docs/ReplicaApi.md#getReplicaInfo) | **GET** /Partitions/{partitionId}/$/GetReplicas/{replicaId} | Gets the information about a replica of a Service Fabric partition.
*ReplicaApi* | [**getReplicaInfoList**](docs/ReplicaApi.md#getReplicaInfoList) | **GET** /Partitions/{partitionId}/$/GetReplicas | Gets the information about replicas of a Service Fabric service partition.
*ReplicaApi* | [**removeReplica**](docs/ReplicaApi.md#removeReplica) | **POST** /Nodes/{nodeName}/$/GetPartitions/{partitionId}/$/GetReplicas/{replicaId}/$/Delete | Removes a service replica running on a node.
*ReplicaApi* | [**reportReplicaHealth**](docs/ReplicaApi.md#reportReplicaHealth) | **POST** /Partitions/{partitionId}/$/GetReplicas/{replicaId}/$/ReportHealth | Sends a health report on the Service Fabric replica.
*ReplicaApi* | [**restartReplica**](docs/ReplicaApi.md#restartReplica) | **POST** /Nodes/{nodeName}/$/GetPartitions/{partitionId}/$/GetReplicas/{replicaId}/$/Restart | Restarts a service replica of a persisted service running on a node.
*ServiceApi* | [**createService**](docs/ServiceApi.md#createService) | **POST** /Applications/{applicationId}/$/GetServices/$/Create | Creates the specified service.
*ServiceApi* | [**createServiceFromTemplate**](docs/ServiceApi.md#createServiceFromTemplate) | **POST** /Applications/{applicationId}/$/GetServices/$/CreateFromTemplate | Creates a Service Fabric service from the service template defined in the application manifest.
*ServiceApi* | [**deleteService**](docs/ServiceApi.md#deleteService) | **POST** /Services/{serviceId}/$/Delete | Deletes an existing Service Fabric service.
*ServiceApi* | [**getApplicationNameInfo**](docs/ServiceApi.md#getApplicationNameInfo) | **GET** /Services/{serviceId}/$/GetApplicationName | Gets the name of the Service Fabric application for a service.
*ServiceApi* | [**getServiceDescription**](docs/ServiceApi.md#getServiceDescription) | **GET** /Services/{serviceId}/$/GetDescription | Gets the description of an existing Service Fabric service.
*ServiceApi* | [**getServiceHealth**](docs/ServiceApi.md#getServiceHealth) | **GET** /Services/{serviceId}/$/GetHealth | Gets the health of the specified Service Fabric service.
*ServiceApi* | [**getServiceHealthUsingPolicy**](docs/ServiceApi.md#getServiceHealthUsingPolicy) | **POST** /Services/{serviceId}/$/GetHealth | Gets the health of the specified Service Fabric service, by using the specified health policy.
*ServiceApi* | [**getServiceInfo**](docs/ServiceApi.md#getServiceInfo) | **GET** /Applications/{applicationId}/$/GetServices/{serviceId} | Gets the information about the specific service belonging to a Service Fabric application.
*ServiceApi* | [**getServiceInfoList**](docs/ServiceApi.md#getServiceInfoList) | **GET** /Applications/{applicationId}/$/GetServices | Gets the information about all services belonging to the application specified by the application id.
*ServiceApi* | [**reportServiceHealth**](docs/ServiceApi.md#reportServiceHealth) | **POST** /Services/{serviceId}/$/ReportHealth | Sends a health report on the Service Fabric service.
*ServiceApi* | [**resolveService**](docs/ServiceApi.md#resolveService) | **GET** /Services/{serviceId}/$/ResolvePartition | Resolve a Service Fabric partition.
*ServiceApi* | [**updateService**](docs/ServiceApi.md#updateService) | **POST** /Services/{serviceId}/$/Update | Updates the specified service using the given update description.
*ServicePackageApi* | [**deployedServicePackageToNode**](docs/ServicePackageApi.md#deployedServicePackageToNode) | **POST** /Nodes/{nodeName}/$/DeployServicePackage | Downloads packages associated with specified service manifest to image cache on specified node.
*ServicePackageApi* | [**getDeployedServicePackageHealth**](docs/ServicePackageApi.md#getDeployedServicePackageHealth) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServicePackages/{servicePackageName}/$/GetHealth | Gets the information about health of an service package for a specific application deployed for a Service Fabric node and application.
*ServicePackageApi* | [**getDeployedServicePackageHealthUsingPolicy**](docs/ServicePackageApi.md#getDeployedServicePackageHealthUsingPolicy) | **POST** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServicePackages/{servicePackageName}/$/GetHealth | Gets the information about health of service package for a specific application deployed on a Service Fabric node using the specified policy.
*ServicePackageApi* | [**getDeployedServicePackageInfoList**](docs/ServicePackageApi.md#getDeployedServicePackageInfoList) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServicePackages | Gets the list of service packages deployed on a Service Fabric node.
*ServicePackageApi* | [**getDeployedServicePackageInfoListByName**](docs/ServicePackageApi.md#getDeployedServicePackageInfoListByName) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServicePackages/{servicePackageName} | Gets the list of service packages deployed on a Service Fabric node matching exactly the specified name.
*ServicePackageApi* | [**reportDeployedServicePackageHealth**](docs/ServicePackageApi.md#reportDeployedServicePackageHealth) | **POST** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServicePackages/{servicePackageName}/$/ReportHealth | Sends a health report on the Service Fabric deployed service package.
*ServiceTypeApi* | [**getDeployedServiceTypeInfoByName**](docs/ServiceTypeApi.md#getDeployedServiceTypeInfoByName) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServiceTypes/{serviceTypeName} | Gets the information about a specified service type of the application deployed on a node in a Service Fabric cluster.
*ServiceTypeApi* | [**getDeployedServiceTypeInfoList**](docs/ServiceTypeApi.md#getDeployedServiceTypeInfoList) | **GET** /Nodes/{nodeName}/$/GetApplications/{applicationId}/$/GetServiceTypes | Gets the list containing the information about service types from the applications deployed on a node in a Service Fabric cluster.
*ServiceTypeApi* | [**getServiceManifest**](docs/ServiceTypeApi.md#getServiceManifest) | **GET** /ApplicationTypes/{applicationTypeName}/$/GetServiceManifest | Gets the manifest describing a service type.
*ServiceTypeApi* | [**getServiceTypeInfoList**](docs/ServiceTypeApi.md#getServiceTypeInfoList) | **GET** /ApplicationTypes/{applicationTypeName}/$/GetServiceTypes | Gets the list containing the information about service types that are supported by a provisioned application type in a Service Fabric cluster.


## Documentation for Models

 - [AadMetadata](docs/AadMetadata.md)
 - [AadMetadataObject](docs/AadMetadataObject.md)
 - [ApplicationCapacityDescription](docs/ApplicationCapacityDescription.md)
 - [ApplicationDefinitionKind](docs/ApplicationDefinitionKind.md)
 - [ApplicationDescription](docs/ApplicationDescription.md)
 - [ApplicationHealth](docs/ApplicationHealth.md)
 - [ApplicationHealthEvaluation](docs/ApplicationHealthEvaluation.md)
 - [ApplicationHealthPolicies](docs/ApplicationHealthPolicies.md)
 - [ApplicationHealthPolicy](docs/ApplicationHealthPolicy.md)
 - [ApplicationHealthPolicyMapItem](docs/ApplicationHealthPolicyMapItem.md)
 - [ApplicationHealthState](docs/ApplicationHealthState.md)
 - [ApplicationHealthStateChunk](docs/ApplicationHealthStateChunk.md)
 - [ApplicationHealthStateChunkList](docs/ApplicationHealthStateChunkList.md)
 - [ApplicationHealthStateFilter](docs/ApplicationHealthStateFilter.md)
 - [ApplicationInfo](docs/ApplicationInfo.md)
 - [ApplicationLoadInfo](docs/ApplicationLoadInfo.md)
 - [ApplicationMetricDescription](docs/ApplicationMetricDescription.md)
 - [ApplicationNameInfo](docs/ApplicationNameInfo.md)
 - [ApplicationParameter](docs/ApplicationParameter.md)
 - [ApplicationStatus](docs/ApplicationStatus.md)
 - [ApplicationTypeApplicationsHealthEvaluation](docs/ApplicationTypeApplicationsHealthEvaluation.md)
 - [ApplicationTypeDefinitionKind](docs/ApplicationTypeDefinitionKind.md)
 - [ApplicationTypeHealthPolicyMapItem](docs/ApplicationTypeHealthPolicyMapItem.md)
 - [ApplicationTypeImageStorePath](docs/ApplicationTypeImageStorePath.md)
 - [ApplicationTypeImageStoreVersion](docs/ApplicationTypeImageStoreVersion.md)
 - [ApplicationTypeInfo](docs/ApplicationTypeInfo.md)
 - [ApplicationTypeManifest](docs/ApplicationTypeManifest.md)
 - [ApplicationTypeStatus](docs/ApplicationTypeStatus.md)
 - [ApplicationUpgradeDescription](docs/ApplicationUpgradeDescription.md)
 - [ApplicationUpgradeProgressInfo](docs/ApplicationUpgradeProgressInfo.md)
 - [ApplicationUpgradeUpdateDescription](docs/ApplicationUpgradeUpdateDescription.md)
 - [ApplicationsHealthEvaluation](docs/ApplicationsHealthEvaluation.md)
 - [BinaryPropertyValue](docs/BinaryPropertyValue.md)
 - [ChaosContext](docs/ChaosContext.md)
 - [ChaosContextMapItem](docs/ChaosContextMapItem.md)
 - [ChaosEvent](docs/ChaosEvent.md)
 - [ChaosEventKind](docs/ChaosEventKind.md)
 - [ChaosEventWrapper](docs/ChaosEventWrapper.md)
 - [ChaosParameters](docs/ChaosParameters.md)
 - [ChaosReport](docs/ChaosReport.md)
 - [CheckExistsPropertyBatchOperation](docs/CheckExistsPropertyBatchOperation.md)
 - [CheckSequencePropertyBatchOperation](docs/CheckSequencePropertyBatchOperation.md)
 - [CheckValuePropertyBatchOperation](docs/CheckValuePropertyBatchOperation.md)
 - [ClusterConfiguration](docs/ClusterConfiguration.md)
 - [ClusterConfigurationUpgradeDescription](docs/ClusterConfigurationUpgradeDescription.md)
 - [ClusterConfigurationUpgradeStatusInfo](docs/ClusterConfigurationUpgradeStatusInfo.md)
 - [ClusterHealth](docs/ClusterHealth.md)
 - [ClusterHealthChunk](docs/ClusterHealthChunk.md)
 - [ClusterHealthChunkQueryDescription](docs/ClusterHealthChunkQueryDescription.md)
 - [ClusterHealthPolicies](docs/ClusterHealthPolicies.md)
 - [ClusterHealthPolicy](docs/ClusterHealthPolicy.md)
 - [ClusterManifest](docs/ClusterManifest.md)
 - [ClusterUpgradeDescriptionObject](docs/ClusterUpgradeDescriptionObject.md)
 - [ClusterUpgradeHealthPolicyObject](docs/ClusterUpgradeHealthPolicyObject.md)
 - [ClusterUpgradeProgressObject](docs/ClusterUpgradeProgressObject.md)
 - [CodePackageEntryPoint](docs/CodePackageEntryPoint.md)
 - [CodePackageEntryPointStatistics](docs/CodePackageEntryPointStatistics.md)
 - [ComposeDeploymentStatus](docs/ComposeDeploymentStatus.md)
 - [ComposeDeploymentStatusInfo](docs/ComposeDeploymentStatusInfo.md)
 - [ComposeDeploymentUpgradeDescription](docs/ComposeDeploymentUpgradeDescription.md)
 - [ComposeDeploymentUpgradeProgressInfo](docs/ComposeDeploymentUpgradeProgressInfo.md)
 - [ComposeDeploymentUpgradeState](docs/ComposeDeploymentUpgradeState.md)
 - [CreateComposeDeploymentDescription](docs/CreateComposeDeploymentDescription.md)
 - [CurrentUpgradeDomainProgressInfo](docs/CurrentUpgradeDomainProgressInfo.md)
 - [DeactivationIntentDescription](docs/DeactivationIntentDescription.md)
 - [DeletePropertyBatchOperation](docs/DeletePropertyBatchOperation.md)
 - [DeltaNodesCheckHealthEvaluation](docs/DeltaNodesCheckHealthEvaluation.md)
 - [DeployServicePackageToNodeDescription](docs/DeployServicePackageToNodeDescription.md)
 - [DeployedApplicationHealth](docs/DeployedApplicationHealth.md)
 - [DeployedApplicationHealthEvaluation](docs/DeployedApplicationHealthEvaluation.md)
 - [DeployedApplicationHealthState](docs/DeployedApplicationHealthState.md)
 - [DeployedApplicationHealthStateChunk](docs/DeployedApplicationHealthStateChunk.md)
 - [DeployedApplicationHealthStateChunkList](docs/DeployedApplicationHealthStateChunkList.md)
 - [DeployedApplicationHealthStateFilter](docs/DeployedApplicationHealthStateFilter.md)
 - [DeployedApplicationInfo](docs/DeployedApplicationInfo.md)
 - [DeployedApplicationStatus](docs/DeployedApplicationStatus.md)
 - [DeployedApplicationsHealthEvaluation](docs/DeployedApplicationsHealthEvaluation.md)
 - [DeployedCodePackageInfo](docs/DeployedCodePackageInfo.md)
 - [DeployedServicePackageHealth](docs/DeployedServicePackageHealth.md)
 - [DeployedServicePackageHealthEvaluation](docs/DeployedServicePackageHealthEvaluation.md)
 - [DeployedServicePackageHealthState](docs/DeployedServicePackageHealthState.md)
 - [DeployedServicePackageHealthStateChunk](docs/DeployedServicePackageHealthStateChunk.md)
 - [DeployedServicePackageHealthStateChunkList](docs/DeployedServicePackageHealthStateChunkList.md)
 - [DeployedServicePackageHealthStateFilter](docs/DeployedServicePackageHealthStateFilter.md)
 - [DeployedServicePackageInfo](docs/DeployedServicePackageInfo.md)
 - [DeployedServicePackagesHealthEvaluation](docs/DeployedServicePackagesHealthEvaluation.md)
 - [DeployedServiceReplicaDetailInfo](docs/DeployedServiceReplicaDetailInfo.md)
 - [DeployedServiceReplicaInfo](docs/DeployedServiceReplicaInfo.md)
 - [DeployedServiceTypeInfo](docs/DeployedServiceTypeInfo.md)
 - [DeployedStatefulServiceReplicaDetailInfo](docs/DeployedStatefulServiceReplicaDetailInfo.md)
 - [DeployedStatefulServiceReplicaInfo](docs/DeployedStatefulServiceReplicaInfo.md)
 - [DeployedStatelessServiceInstanceDetailInfo](docs/DeployedStatelessServiceInstanceDetailInfo.md)
 - [DeployedStatelessServiceInstanceInfo](docs/DeployedStatelessServiceInstanceInfo.md)
 - [DeploymentStatus](docs/DeploymentStatus.md)
 - [DoublePropertyValue](docs/DoublePropertyValue.md)
 - [EnsureAvailabilitySafetyCheck](docs/EnsureAvailabilitySafetyCheck.md)
 - [EnsurePartitionQurumSafetyCheck](docs/EnsurePartitionQurumSafetyCheck.md)
 - [EntityHealth](docs/EntityHealth.md)
 - [EntityHealthState](docs/EntityHealthState.md)
 - [EntityHealthStateChunk](docs/EntityHealthStateChunk.md)
 - [EntityHealthStateChunkList](docs/EntityHealthStateChunkList.md)
 - [EntityKind](docs/EntityKind.md)
 - [EntityKindHealthStateCount](docs/EntityKindHealthStateCount.md)
 - [EntryPointStatus](docs/EntryPointStatus.md)
 - [Epoch](docs/Epoch.md)
 - [EventHealthEvaluation](docs/EventHealthEvaluation.md)
 - [ExecutingFaultsChaosEvent](docs/ExecutingFaultsChaosEvent.md)
 - [FabricCodeVersionInfo](docs/FabricCodeVersionInfo.md)
 - [FabricConfigVersionInfo](docs/FabricConfigVersionInfo.md)
 - [FabricError](docs/FabricError.md)
 - [FabricErrorCodes](docs/FabricErrorCodes.md)
 - [FabricErrorError](docs/FabricErrorError.md)
 - [FabricReplicaStatus](docs/FabricReplicaStatus.md)
 - [FailedPropertyBatchInfo](docs/FailedPropertyBatchInfo.md)
 - [FailedUpgradeDomainProgressObject](docs/FailedUpgradeDomainProgressObject.md)
 - [FailureAction](docs/FailureAction.md)
 - [FailureReason](docs/FailureReason.md)
 - [FailureUpgradeDomainProgressInfo](docs/FailureUpgradeDomainProgressInfo.md)
 - [FileInfo](docs/FileInfo.md)
 - [FileVersion](docs/FileVersion.md)
 - [FolderInfo](docs/FolderInfo.md)
 - [GetPropertyBatchOperation](docs/GetPropertyBatchOperation.md)
 - [GuidPropertyValue](docs/GuidPropertyValue.md)
 - [HealthEvaluation](docs/HealthEvaluation.md)
 - [HealthEvaluationKind](docs/HealthEvaluationKind.md)
 - [HealthEvaluationWrapper](docs/HealthEvaluationWrapper.md)
 - [HealthEvent](docs/HealthEvent.md)
 - [HealthInformation](docs/HealthInformation.md)
 - [HealthState](docs/HealthState.md)
 - [HealthStateCount](docs/HealthStateCount.md)
 - [HealthStatistics](docs/HealthStatistics.md)
 - [HostIsolationMode](docs/HostIsolationMode.md)
 - [HostType](docs/HostType.md)
 - [ImageStoreContent](docs/ImageStoreContent.md)
 - [ImageStoreCopyDescription](docs/ImageStoreCopyDescription.md)
 - [Int64PropertyValue](docs/Int64PropertyValue.md)
 - [Int64RangePartitionInformation](docs/Int64RangePartitionInformation.md)
 - [InvokeDataLossResult](docs/InvokeDataLossResult.md)
 - [InvokeQuorumLossResult](docs/InvokeQuorumLossResult.md)
 - [KeyValueStoreReplicaStatus](docs/KeyValueStoreReplicaStatus.md)
 - [LoadMetricReport](docs/LoadMetricReport.md)
 - [LoadMetricReportInfo](docs/LoadMetricReportInfo.md)
 - [MonitoringPolicyDescription](docs/MonitoringPolicyDescription.md)
 - [MoveCost](docs/MoveCost.md)
 - [NameDescription](docs/NameDescription.md)
 - [NamedPartitionInformation](docs/NamedPartitionInformation.md)
 - [NamedPartitionSchemeDescription](docs/NamedPartitionSchemeDescription.md)
 - [NodeDeactivationInfo](docs/NodeDeactivationInfo.md)
 - [NodeDeactivationIntent](docs/NodeDeactivationIntent.md)
 - [NodeDeactivationStatus](docs/NodeDeactivationStatus.md)
 - [NodeDeactivationTask](docs/NodeDeactivationTask.md)
 - [NodeDeactivationTaskId](docs/NodeDeactivationTaskId.md)
 - [NodeDeactivationTaskType](docs/NodeDeactivationTaskType.md)
 - [NodeHealth](docs/NodeHealth.md)
 - [NodeHealthEvaluation](docs/NodeHealthEvaluation.md)
 - [NodeHealthState](docs/NodeHealthState.md)
 - [NodeHealthStateChunk](docs/NodeHealthStateChunk.md)
 - [NodeHealthStateChunkList](docs/NodeHealthStateChunkList.md)
 - [NodeHealthStateFilter](docs/NodeHealthStateFilter.md)
 - [NodeId](docs/NodeId.md)
 - [NodeImpact](docs/NodeImpact.md)
 - [NodeInfo](docs/NodeInfo.md)
 - [NodeLoadInfo](docs/NodeLoadInfo.md)
 - [NodeLoadMetricInformation](docs/NodeLoadMetricInformation.md)
 - [NodeRepairImpactDescription](docs/NodeRepairImpactDescription.md)
 - [NodeRepairTargetDescription](docs/NodeRepairTargetDescription.md)
 - [NodeResult](docs/NodeResult.md)
 - [NodeStatus](docs/NodeStatus.md)
 - [NodeTransitionProgress](docs/NodeTransitionProgress.md)
 - [NodeTransitionResult](docs/NodeTransitionResult.md)
 - [NodeUpgradePhase](docs/NodeUpgradePhase.md)
 - [NodeUpgradeProgressInfo](docs/NodeUpgradeProgressInfo.md)
 - [NodesHealthEvaluation](docs/NodesHealthEvaluation.md)
 - [OperationState](docs/OperationState.md)
 - [OperationStatus](docs/OperationStatus.md)
 - [OperationType](docs/OperationType.md)
 - [PackageSharingPolicyInfo](docs/PackageSharingPolicyInfo.md)
 - [PackageSharingPolicyScope](docs/PackageSharingPolicyScope.md)
 - [PagedApplicationInfoList](docs/PagedApplicationInfoList.md)
 - [PagedApplicationTypeInfoList](docs/PagedApplicationTypeInfoList.md)
 - [PagedComposeDeploymentStatusInfoList](docs/PagedComposeDeploymentStatusInfoList.md)
 - [PagedNodeInfoList](docs/PagedNodeInfoList.md)
 - [PagedPropertyInfoList](docs/PagedPropertyInfoList.md)
 - [PagedReplicaInfoList](docs/PagedReplicaInfoList.md)
 - [PagedServiceInfoList](docs/PagedServiceInfoList.md)
 - [PagedServicePartitionInfoList](docs/PagedServicePartitionInfoList.md)
 - [PagedSubNameInfoList](docs/PagedSubNameInfoList.md)
 - [PartitionAccessStatus](docs/PartitionAccessStatus.md)
 - [PartitionDataLossProgress](docs/PartitionDataLossProgress.md)
 - [PartitionHealth](docs/PartitionHealth.md)
 - [PartitionHealthEvaluation](docs/PartitionHealthEvaluation.md)
 - [PartitionHealthState](docs/PartitionHealthState.md)
 - [PartitionHealthStateChunk](docs/PartitionHealthStateChunk.md)
 - [PartitionHealthStateChunkList](docs/PartitionHealthStateChunkList.md)
 - [PartitionHealthStateFilter](docs/PartitionHealthStateFilter.md)
 - [PartitionInformation](docs/PartitionInformation.md)
 - [PartitionLoadInformation](docs/PartitionLoadInformation.md)
 - [PartitionQuorumLossProgress](docs/PartitionQuorumLossProgress.md)
 - [PartitionRestartProgress](docs/PartitionRestartProgress.md)
 - [PartitionSafetyCheck](docs/PartitionSafetyCheck.md)
 - [PartitionScheme](docs/PartitionScheme.md)
 - [PartitionSchemeDescription](docs/PartitionSchemeDescription.md)
 - [PartitionsHealthEvaluation](docs/PartitionsHealthEvaluation.md)
 - [PrimaryReplicatorStatus](docs/PrimaryReplicatorStatus.md)
 - [PropertyBatchDescriptionList](docs/PropertyBatchDescriptionList.md)
 - [PropertyBatchInfo](docs/PropertyBatchInfo.md)
 - [PropertyBatchInfoKind](docs/PropertyBatchInfoKind.md)
 - [PropertyBatchOperation](docs/PropertyBatchOperation.md)
 - [PropertyBatchOperationKind](docs/PropertyBatchOperationKind.md)
 - [PropertyDescription](docs/PropertyDescription.md)
 - [PropertyInfo](docs/PropertyInfo.md)
 - [PropertyMetadata](docs/PropertyMetadata.md)
 - [PropertyValue](docs/PropertyValue.md)
 - [PropertyValueKind](docs/PropertyValueKind.md)
 - [ProvisionFabricDescription](docs/ProvisionFabricDescription.md)
 - [PutPropertyBatchOperation](docs/PutPropertyBatchOperation.md)
 - [ReconfigurationInformation](docs/ReconfigurationInformation.md)
 - [ReconfigurationPhase](docs/ReconfigurationPhase.md)
 - [ReconfigurationType](docs/ReconfigurationType.md)
 - [RegistryCredential](docs/RegistryCredential.md)
 - [RemoteReplicatorAcknowledgementDetail](docs/RemoteReplicatorAcknowledgementDetail.md)
 - [RemoteReplicatorAcknowledgementStatus](docs/RemoteReplicatorAcknowledgementStatus.md)
 - [RemoteReplicatorStatus](docs/RemoteReplicatorStatus.md)
 - [RepairImpactDescriptionBase](docs/RepairImpactDescriptionBase.md)
 - [RepairImpactKind](docs/RepairImpactKind.md)
 - [RepairTargetDescriptionBase](docs/RepairTargetDescriptionBase.md)
 - [RepairTargetKind](docs/RepairTargetKind.md)
 - [RepairTask](docs/RepairTask.md)
 - [RepairTaskApproveDescription](docs/RepairTaskApproveDescription.md)
 - [RepairTaskCancelDescription](docs/RepairTaskCancelDescription.md)
 - [RepairTaskDeleteDescription](docs/RepairTaskDeleteDescription.md)
 - [RepairTaskHealthCheckState](docs/RepairTaskHealthCheckState.md)
 - [RepairTaskHistory](docs/RepairTaskHistory.md)
 - [RepairTaskUpdateHealthPolicyDescription](docs/RepairTaskUpdateHealthPolicyDescription.md)
 - [RepairTaskUpdateInfo](docs/RepairTaskUpdateInfo.md)
 - [ReplicaHealth](docs/ReplicaHealth.md)
 - [ReplicaHealthEvaluation](docs/ReplicaHealthEvaluation.md)
 - [ReplicaHealthState](docs/ReplicaHealthState.md)
 - [ReplicaHealthStateChunk](docs/ReplicaHealthStateChunk.md)
 - [ReplicaHealthStateChunkList](docs/ReplicaHealthStateChunkList.md)
 - [ReplicaHealthStateFilter](docs/ReplicaHealthStateFilter.md)
 - [ReplicaInfo](docs/ReplicaInfo.md)
 - [ReplicaKind](docs/ReplicaKind.md)
 - [ReplicaRole](docs/ReplicaRole.md)
 - [ReplicaStatus](docs/ReplicaStatus.md)
 - [ReplicaStatusBase](docs/ReplicaStatusBase.md)
 - [ReplicasHealthEvaluation](docs/ReplicasHealthEvaluation.md)
 - [ReplicatorOperationName](docs/ReplicatorOperationName.md)
 - [ReplicatorQueueStatus](docs/ReplicatorQueueStatus.md)
 - [ReplicatorStatus](docs/ReplicatorStatus.md)
 - [ResolvedServiceEndpoint](docs/ResolvedServiceEndpoint.md)
 - [ResolvedServicePartition](docs/ResolvedServicePartition.md)
 - [RestartDeployedCodePackageDescription](docs/RestartDeployedCodePackageDescription.md)
 - [RestartNodeDescription](docs/RestartNodeDescription.md)
 - [RestartPartitionResult](docs/RestartPartitionResult.md)
 - [ResumeApplicationUpgradeDescription](docs/ResumeApplicationUpgradeDescription.md)
 - [ResumeClusterUpgradeDescription](docs/ResumeClusterUpgradeDescription.md)
 - [RollingUpgradeUpdateDescription](docs/RollingUpgradeUpdateDescription.md)
 - [SafetyCheck](docs/SafetyCheck.md)
 - [SafetyCheckKind](docs/SafetyCheckKind.md)
 - [SafetyCheckWrapper](docs/SafetyCheckWrapper.md)
 - [SecondaryActiveReplicatorStatus](docs/SecondaryActiveReplicatorStatus.md)
 - [SecondaryIdleReplicatorStatus](docs/SecondaryIdleReplicatorStatus.md)
 - [SecondaryReplicatorStatus](docs/SecondaryReplicatorStatus.md)
 - [SeedNodeSafetyCheck](docs/SeedNodeSafetyCheck.md)
 - [SelectedPartition](docs/SelectedPartition.md)
 - [ServiceCorrelationDescription](docs/ServiceCorrelationDescription.md)
 - [ServiceCorrelationScheme](docs/ServiceCorrelationScheme.md)
 - [ServiceDescription](docs/ServiceDescription.md)
 - [ServiceEndpointRole](docs/ServiceEndpointRole.md)
 - [ServiceFromTemplateDescription](docs/ServiceFromTemplateDescription.md)
 - [ServiceHealth](docs/ServiceHealth.md)
 - [ServiceHealthEvaluation](docs/ServiceHealthEvaluation.md)
 - [ServiceHealthState](docs/ServiceHealthState.md)
 - [ServiceHealthStateChunk](docs/ServiceHealthStateChunk.md)
 - [ServiceHealthStateChunkList](docs/ServiceHealthStateChunkList.md)
 - [ServiceHealthStateFilter](docs/ServiceHealthStateFilter.md)
 - [ServiceInfo](docs/ServiceInfo.md)
 - [ServiceKind](docs/ServiceKind.md)
 - [ServiceLoadMetricDescription](docs/ServiceLoadMetricDescription.md)
 - [ServiceLoadMetricWeight](docs/ServiceLoadMetricWeight.md)
 - [ServiceNameInfo](docs/ServiceNameInfo.md)
 - [ServiceOperationName](docs/ServiceOperationName.md)
 - [ServicePackageActivationMode](docs/ServicePackageActivationMode.md)
 - [ServicePartitionInfo](docs/ServicePartitionInfo.md)
 - [ServicePartitionKind](docs/ServicePartitionKind.md)
 - [ServicePartitionStatus](docs/ServicePartitionStatus.md)
 - [ServicePlacementInvalidDomainPolicyDescription](docs/ServicePlacementInvalidDomainPolicyDescription.md)
 - [ServicePlacementNonPartiallyPlaceServicePolicyDescription](docs/ServicePlacementNonPartiallyPlaceServicePolicyDescription.md)
 - [ServicePlacementPolicyDescription](docs/ServicePlacementPolicyDescription.md)
 - [ServicePlacementPolicyType](docs/ServicePlacementPolicyType.md)
 - [ServicePlacementPreferPrimaryDomainPolicyDescription](docs/ServicePlacementPreferPrimaryDomainPolicyDescription.md)
 - [ServicePlacementRequireDomainDistributionPolicyDescription](docs/ServicePlacementRequireDomainDistributionPolicyDescription.md)
 - [ServicePlacementRequiredDomainPolicyDescription](docs/ServicePlacementRequiredDomainPolicyDescription.md)
 - [ServiceStatus](docs/ServiceStatus.md)
 - [ServiceTypeDescription](docs/ServiceTypeDescription.md)
 - [ServiceTypeExtensionDescription](docs/ServiceTypeExtensionDescription.md)
 - [ServiceTypeHealthPolicy](docs/ServiceTypeHealthPolicy.md)
 - [ServiceTypeHealthPolicyMapItem](docs/ServiceTypeHealthPolicyMapItem.md)
 - [ServiceTypeInfo](docs/ServiceTypeInfo.md)
 - [ServiceTypeManifest](docs/ServiceTypeManifest.md)
 - [ServiceTypeRegistrationStatus](docs/ServiceTypeRegistrationStatus.md)
 - [ServiceUpdateDescription](docs/ServiceUpdateDescription.md)
 - [ServicesHealthEvaluation](docs/ServicesHealthEvaluation.md)
 - [SingletonPartitionInformation](docs/SingletonPartitionInformation.md)
 - [SingletonPartitionSchemeDescription](docs/SingletonPartitionSchemeDescription.md)
 - [StartClusterUpgradeDescription](docs/StartClusterUpgradeDescription.md)
 - [StartedChaosEvent](docs/StartedChaosEvent.md)
 - [StatefulServiceDescription](docs/StatefulServiceDescription.md)
 - [StatefulServiceInfo](docs/StatefulServiceInfo.md)
 - [StatefulServicePartitionInfo](docs/StatefulServicePartitionInfo.md)
 - [StatefulServiceReplicaHealth](docs/StatefulServiceReplicaHealth.md)
 - [StatefulServiceReplicaHealthState](docs/StatefulServiceReplicaHealthState.md)
 - [StatefulServiceReplicaInfo](docs/StatefulServiceReplicaInfo.md)
 - [StatefulServiceTypeDescription](docs/StatefulServiceTypeDescription.md)
 - [StatefulServiceUpdateDescription](docs/StatefulServiceUpdateDescription.md)
 - [StatelessServiceDescription](docs/StatelessServiceDescription.md)
 - [StatelessServiceInfo](docs/StatelessServiceInfo.md)
 - [StatelessServiceInstanceHealth](docs/StatelessServiceInstanceHealth.md)
 - [StatelessServiceInstanceHealthState](docs/StatelessServiceInstanceHealthState.md)
 - [StatelessServiceInstanceInfo](docs/StatelessServiceInstanceInfo.md)
 - [StatelessServicePartitionInfo](docs/StatelessServicePartitionInfo.md)
 - [StatelessServiceTypeDescription](docs/StatelessServiceTypeDescription.md)
 - [StatelessServiceUpdateDescription](docs/StatelessServiceUpdateDescription.md)
 - [StoppedChaosEvent](docs/StoppedChaosEvent.md)
 - [StringPropertyValue](docs/StringPropertyValue.md)
 - [SuccessfulPropertyBatchInfo](docs/SuccessfulPropertyBatchInfo.md)
 - [SystemApplicationHealthEvaluation](docs/SystemApplicationHealthEvaluation.md)
 - [TestErrorChaosEvent](docs/TestErrorChaosEvent.md)
 - [UniformInt64RangePartitionSchemeDescription](docs/UniformInt64RangePartitionSchemeDescription.md)
 - [UnprovisionFabricDescription](docs/UnprovisionFabricDescription.md)
 - [UpdateClusterUpgradeDescription](docs/UpdateClusterUpgradeDescription.md)
 - [UpgradeDomainDeltaNodesCheckHealthEvaluation](docs/UpgradeDomainDeltaNodesCheckHealthEvaluation.md)
 - [UpgradeDomainInfo](docs/UpgradeDomainInfo.md)
 - [UpgradeDomainNodesHealthEvaluation](docs/UpgradeDomainNodesHealthEvaluation.md)
 - [UpgradeDomainState](docs/UpgradeDomainState.md)
 - [UpgradeKind](docs/UpgradeKind.md)
 - [UpgradeMode](docs/UpgradeMode.md)
 - [UpgradeState](docs/UpgradeState.md)
 - [UpgradeType](docs/UpgradeType.md)
 - [ValidationFailedChaosEvent](docs/ValidationFailedChaosEvent.md)
 - [WaitForInbuildReplicaSafetyCheck](docs/WaitForInbuildReplicaSafetyCheck.md)
 - [WaitForPrimaryPlacementSafetyCheck](docs/WaitForPrimaryPlacementSafetyCheck.md)
 - [WaitForPrimarySwapSafetyCheck](docs/WaitForPrimarySwapSafetyCheck.md)
 - [WaitForReconfigurationSafetyCheck](docs/WaitForReconfigurationSafetyCheck.md)
 - [WaitingChaosEvent](docs/WaitingChaosEvent.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization

Endpoints do not require authorization.


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



